src/App.css
/* Sections */

.side-section {
  background-color: #053b50;
  height: 100vh;
}

.nopadding {
  padding: 0;
}

.header {
  height: 11vh;
  background-color: #053b50;
}

.group-list {
  height: 17vh;
}

.schedule-list {
  background-color: #061b23;
  height: 72vh;
}

.group-chat {
  background-color: #053b50;
  height: 72vh;
}

